--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container-fluid">
 
-    <h1  style="color: aliceblue;margin-left: 580px;" class="navbar-brand" href="#">SELECT CATEGORY</h1>
+    <h1   class="navbar-brand" href="#">SELECT CATEGORY</h1>
 
 
   </div>
