--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -25,9 +25,9 @@
   display: flex;
   flex-wrap: wrap;
  gap: 10px;
-  margin-top: 40px;
-  position: relative;
-  left: 600px;
+  margin-top: 35px;
+ align-items: center;
+ justify-content: center;
   text-align: center;
   vertical-align: middle;
 
